--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,9 @@ mapsCompose="2.11.4"
 playServicesMaps="19.2.0"
 accompanist="0.33.2-alpha"
 playServicesLocation = "21.3.0"
+roomCompiler = "2.7.1"
+roomRuntime = "2.7.1"
+roomKtx = "2.7.1"
 
 [libraries]
 androidx-navigation = {group="androidx.navigation", name="navigation-runtime-ktx", version.ref="navigation"}
@@ -49,6 +52,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomCompiler" }
+androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "roomRuntime" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
